# seoleo-mcp

./: CLAUDE.md  README.md  pyproject.toml
src/seoleo/: server.py
src/seoleo/tools/: competitor.py
